--- a/Front/desktop/src/index.css
+++ b/Front/desktop/src/index.css
@@ -26,3 +26,19 @@ code {
   pointer-events: none;
   opacity: 0;
 }
+
+@keyframes moveHorizontally {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.animate-bounce {
+  animation: moveHorizontally 0.6s ease-in-out infinite;
+}
