--- a/Front/desktop/src/index.css
+++ b/Front/desktop/src/index.css
@@ -42,3 +42,18 @@ code {
 .animate-bounce {
   animation: moveHorizontally 0.6s ease-in-out infinite;
 }
+
+@keyframes slideIn {
+  0% {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.app-details-card {
+  animation: slideIn 0.3s ease-out;
+}
