--- a/Front/desktop/src/index.css
+++ b/Front/desktop/src/index.css
@@ -58,6 +58,20 @@ code {
   animation: slideIn 0.3s ease-out;
 }
 
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0);
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
 
 @keyframes complexSpin {
     0% {
